--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "hmr": "ng serve --hmr -e=hmr",
     "build": "ng build",
     "test": "ng lint --type-check && ng test --single-run"
   },
@@ -16,14 +17,14 @@
     "@angular-redux/form": "^6.3.0",
     "@angular-redux/router": "^6.3.0",
     "@angular-redux/store": "6.5.0",
-    "@angular/common": "^4.1.0",
-    "@angular/compiler": "^4.1.0",
-    "@angular/core": "^4.1.0",
-    "@angular/forms": "^4.1.0",
-    "@angular/http": "^4.1.0",
-    "@angular/platform-browser": "^4.1.0",
-    "@angular/platform-browser-dynamic": "^4.1.0",
-    "@angular/router": "^4.1.0",
+    "@angular/common": "^4.2.4",
+    "@angular/compiler": "^4.2.4",
+    "@angular/core": "^4.2.4",
+    "@angular/forms": "^4.2.4",
+    "@angular/http": "^4.2.4",
+    "@angular/platform-browser": "^4.2.4",
+    "@angular/platform-browser-dynamic": "^4.2.4",
+    "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
     "flux-standard-action": "^1.2.0",
     "ramda": "^0.23.0",
@@ -35,11 +36,12 @@
   },
   "devDependencies": {
     "@angular/cli": "1.0.1",
-    "@angular/compiler-cli": "^4.1.0",
+    "@angular/compiler-cli": "^4.2.4",
+    "@angularclass/hmr": "^1.2.2",
     "@types/jasmine": "2.5.47",
-    "@types/node": "~6.0.71",
+    "@types/node": "^6.0.78",
     "@types/redux-logger": "^3.0.0",
-    "codelyzer": "~3.0.1",
+    "codelyzer": "^3.1.1",
     "jasmine-core": "~2.6.1",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.6.0",
