--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -13,7 +13,7 @@
     "target": "es5",
     "module": "es2015",
     "baseUrl": "",
-    "types": []
+    "typeRoots": [ "../node_modules/@types" ]
   },
   "exclude": [
     "test.ts",
