--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -12,10 +12,7 @@
     "module": "commonjs",
     "target": "es6",
     "baseUrl": "",
-    "types": [
-      "jasmine",
-      "node"
-    ]
+    "typeRoots": [ "../node_modules/@types" ]
   },
   "files": [
     "test.ts"
